# privy

./: CMakeLists.txt  FroggerTexturePack.h  README.md  config.ini.in  main.cpp
cmake/: DownloadPackage-CMakeLists.txt.in  DownloadPackage.cmake  FindSDL2.cmake  FindSDL2_IMAGE.cmake  sdl2-CMakeLists.txt.in
privy/: CMakeLists.txt  Game.cpp  Window.cpp  Window.h  exception_impl.cpp  exception_impl.h  logger.h  privy.cpp  privy.h  renderer.cpp  renderer.h  sdl_base.h  sprite.cpp  surface.cpp  surface.h  texture.cpp  texture.h  view.cpp
privy/include/privy/: Game.h  Window.h  exception.h  matix.h  privy.h  privy_math.h  renderer.h  sprite.h  view.h
util/: ini_parser.cpp  ini_parser.h  util.h
